<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"



    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_titulo"
            android:layout_weight="5"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_guardar"
            android:layout_weight="1"/>

    </LinearLayout>


        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ht_nombre"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ht_apellido"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/txt_tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ht_numero_tarjeta"
                android:maxLength="16"
                android:layout_marginTop="15dp"
                android:inputType="number"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/txt_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ht_mes"
                android:layout_weight="1"
                android:maxLength="2"
                android:inputType="date"/>

            <EditText
                android:id="@+id/txt_ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ht_ano"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:inputType="date"
                android:maxLength="4"/>

            <EditText
                android:id="@+id/txt_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ht_codigo"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_direccion"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/txt_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ht_calle"
                android:layout_marginTop="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ht_ciudad"
                android:layout_marginTop="15dp"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/txt_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ht_estado"
                android:layout_weight="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_codigopostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ht_postal"
                android:layout_weight="1"
                android:inputType="number"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTRAR"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUSCAR"
            android:layout_weight="1"/>

    </LinearLayout>









</LinearLayout>

